Fixed alignment of timeline in phone's viewport and submission page's success image

--- a/css/form-submit.css
+++ b/css/form-submit.css
@@ -23,4 +23,5 @@
 .submit-form-content p {
     font-family: sans-serif;
     font-size: large;
+    text-align: center;
 }
