--- a/css/style.css
+++ b/css/style.css
@@ -636,6 +636,7 @@ section {
 
     .timeline-item:nth-child(odd),
     .timeline-item:nth-child(even) {
+        text-align: left;
         padding-left: 37px;
     }
 
